--- a/auth/delilogin.html
+++ b/auth/delilogin.html
@@ -12,7 +12,7 @@
   <header class="navbar">
     <div class="logo">
         <a href="/index.html">
-            <img src="/logo.png" alt="FitBite Logo">        
+            <img src="../logo.png" alt="FitBite Logo">        
         </a>
     </div>
   </header>
