--- a/auth/useregister.html
+++ b/auth/useregister.html
@@ -11,7 +11,7 @@
   <header class="navbar">
     <div class="logo">
         <a href="/index.html">
-            <img src="/logo.png" alt="FitBite Logo">        
+            <img src="../logo.png" alt="FitBite Logo">        
         </a>
     </div>
   </header>
