changed the link for registration pages

--- a/auth/cloudlogin.html
+++ b/auth/cloudlogin.html
@@ -22,17 +22,15 @@
       <p>Manage meals and orders</p>
   
       <form>
-        <label>Email</label>
         <input type="email" placeholder="Enter kitchen email">
   
-        <label>Password</label>
         <input type="password" placeholder="Enter password">
   
         <button>Login</button>
       </form>
   
       <div class="auth-footer">
-        New kitchen? <a href="/auth/cloudregister.html"">Register here</a>
+        New kitchen? <a href="cloudregister.html">Register here</a>
       </div>
     </div>
   </div>
