--- a/auth/delilogin.html
+++ b/auth/delilogin.html
@@ -32,7 +32,7 @@
       </form>
   
       <div class="auth-footer">
-        New partner? <a href="/auth/deliregister.html">Register here</a>
+        New partner? <a href="deliregister.html">Register here</a>
       </div>
     </div>
   </div>
