--- a/auth/userlogin.html
+++ b/auth/userlogin.html
@@ -30,7 +30,7 @@
       </form>
   
       <div class="auth-footer">
-        New user? <a href="../auth/useregister.html">Register here</a>
+        New user? <a href="useregister.html">Register here</a>
       </div>
     </div>
   </div>
