--- a/auth/cloudlogin.html
+++ b/auth/cloudlogin.html
@@ -11,7 +11,7 @@
 <body>
   <header class="navbar">
     <div class="logo">
-        <a href="/index.html">
+        <a href="../index.html">
             <img src="../logo.png" alt="FitBite Logo">        
         </a>
     </div>
