--- a/auth/useregister.html
+++ b/auth/useregister.html
@@ -10,7 +10,7 @@
 <body>
   <header class="navbar">
     <div class="logo">
-        <a href="/index.html">
+        <a href="../index.html">
             <img src="../logo.png" alt="FitBite Logo">        
         </a>
     </div>
