Design the entire meals page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     
     <nav>
         <a href="#">Home</a>
-        <a href="#">Meals</a>
+        <a href="meals.html">Meals</a>
         <a href="#">Nutrition Plans</a>
         <a href="#">Cloud Kitchens</a>
         <a href="#">Orders</a>
